@@ -155,6 +155,13 @@ $SERVER_ID = "fooserver";
 # set 1 to use hardcoded DTD instead the one genereated by CGI module
 # $SAURON_DTD_HACK = 0;
 
+# Set this to change behaviour of HINFO edit fields (for hosts):
+#    1 = Allow empty values (last in the drop-down list)
+#   -1 = Allow emptry values (first in the drop-down list)
+#    0 = Don't allow empty values
+#
+# $SAURON_HINFO_MODE = 1;
+
 #########################################################################
 # misc
 
